description of the MC added

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,16 @@
 .Rhistory
 .RData
 dpcr_congress.Rproj
+figure
+poster-concordance.tex
+poster.aux
+poster.bbl
+poster.blg
+poster.log
+poster.nav
+poster.out
+poster.pdf
+poster.snm
+poster.synctex.gz
+poster.tex
+poster.toc
